--- a/index.html
+++ b/index.html
@@ -3,126 +3,104 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>追星存錢｜首頁</title>
+  <title>追星存錢</title>
   <link rel="stylesheet" href="assets/app.css" />
 </head>
 <body>
   <div class="bg-wrap"></div>
 
-  <header>
-    <h1>追星存錢網站（首頁）</h1>
-    <p class="sub">入口：月曆 / 事件統整 / 素材管理（不用改程式碼）</p>
-  </header>
+<header>
+  <h1>追星存錢手帳</h1>
 
-  <main class="grid">
-    <section class="card">
-      <h2 style="margin:0 0 8px; font-size:15px;">功能入口</h2>
+  <!-- 右上角小小素材庫 -->
+  <a class="mini-link" href="settings.html">素材庫</a>
+</header>
 
-      <div class="row" style="margin-top:10px;">
-        <a class="btn primary" href="calendar.html">📅 月曆版存錢區</a>
-        <a class="btn primary" href="events.html">📊 不同事件統整區</a>
-        <a class="btn" href="settings.html">🧰 素材管理（不用改程式碼）</a>
-      </div>
+<main class="home-main">
+  <!-- KPI -->
+  <div class="row">
+    <span class="pill">本月合計：<b id="monthTotal">0</b></span>
+    <span class="pill">連續打卡：<b id="streak">0</b> 天</span>
+  </div>
 
-      <div class="row" style="margin-top:12px;">
-        <span class="pill">本月合計：<b id="monthTotal">0</b> 元</span>
-        <span class="pill">Streak：<b id="streak">0</b> 天</span>
-        <span class="pill">今日：<b id="today">-</b></span>
-      </div>
+  <!-- 兩個大入口 -->
+  <div class="home-actions">
+    <a class="btn primary" href="calendar.html">
+      <div class="icon">📅</div>
+      <div>月曆存錢</div>
+    </a>
 
-      <p class="hint">Streak = 從今天往回連續幾天都有存錢（當天累計 > 0 算打卡）。</p>
-    </section>
+    <a class="btn primary" href="events.html">
+      <div class="icon">📊</div>
+      <div>事件統整</div>
+    </a>
+  </div>
 
-    <aside class="card">
-      <h2 style="margin:0 0 8px; font-size:15px;">外觀與音樂</h2>
+  <!-- 最下面：外觀與音樂 -->
+  <div class="home-footer">
+    <div class="row">
+      <button class="btn" id="bgPrev">背景 ◀</button>
+      <button class="btn" id="bgNext">背景 ▶</button>
 
-      <div class="row" style="margin-top:10px;">
-        <button class="btn" id="bgPrev">🖼 上一張背景</button>
-        <button class="btn" id="bgNext">🖼 下一張背景</button>
-      </div>
+      <span>透明度</span>
+      <input id="bgOpacity" type="range" min="0.1" max="0.6" step="0.05" />
 
-      <label>背景透明度</label>
-      <input id="bgOpacity" type="range" min="0.15" max="0.95" step="0.05" />
+      <button class="btn" id="musicToggle">🎵 音樂</button>
+    </div>
 
-      <div class="row" style="margin-top:10px;">
-        <button class="btn good" id="musicToggle">🎵 音樂：關</button>
-        <span class="pill">提示：先去 settings 設 repo</span>
-      </div>
+    <audio id="bgm" style="width:100%;margin-top:8px;display:none" controls></audio>
+  </div>
+</main>
 
-      <audio id="bgm" controls style="width:100%; margin-top:10px; display:none;"></audio>
-      <p class="hint">手機上音樂可能要你先點一下按鈕/播放器才會播放，這是瀏覽器限制。</p>
-    </aside>
-  </main>
+<script type="module">
+  import {
+    getUI, saveUI, applyBackground, setupBGM,
+    loadData, monthSum, computeStreak, ymd
+  } from "./assets/app.js";
 
-  <script type="module">
-    import {
-      getUI, saveUI, applyBackground, setupBGM,
-      loadData, monthSum, computeStreak, ymd
-    } from "./assets/app.js";
+  const bgOpacity = document.getElementById("bgOpacity");
+  const musicToggle = document.getElementById("musicToggle");
+  const audio = document.getElementById("bgm");
 
-    const bgOpacity = document.getElementById("bgOpacity");
-    const musicToggle = document.getElementById("musicToggle");
-    const audio = document.getElementById("bgm");
+  function syncKPI(){
+    const data = loadData();
+    const now = new Date();
+    const todayKey = ymd(now);
+    document.getElementById("monthTotal").textContent =
+      monthSum(data, now.getFullYear(), now.getMonth(), "");
+    document.getElementById("streak").textContent =
+      computeStreak(data, todayKey, "");
+  }
 
-    function syncKPI(){
-      const data = loadData();
-      const now = new Date();
-      const todayKey = ymd(now);
-      document.getElementById("today").textContent = todayKey;
+  async function syncUI(){
+    const ui = getUI();
+    await applyBackground("home");
+    bgOpacity.value = String(ui.bgOpacity ?? 0.25);
+    musicToggle.textContent = ui.musicOn ? "🎵 音樂 ON" : "🎵 音樂 OFF";
+    audio.style.display = ui.musicOn ? "block" : "none";
+    await setupBGM(audio);
+  }
 
-      const mTotal = monthSum(data, now.getFullYear(), now.getMonth(), "");
-      document.getElementById("monthTotal").textContent = String(mTotal);
-
-      const streak = computeStreak(data, todayKey, "");
-      document.getElementById("streak").textContent = String(streak);
-    }
-
-    async function syncUI(){
-      const ui = getUI();
-      await applyBackground("home");
-      bgOpacity.value = String(ui.bgOpacity ?? 0.55);
-      musicToggle.textContent = `🎵 音樂：${ui.musicOn ? "開" : "關"}`;
-      audio.style.display = ui.musicOn ? "block" : "none";
-      await setupBGM(audio);
-    }
-
-    document.getElementById("bgPrev").addEventListener("click", async ()=>{
-      const ui = getUI();
-      ui.bgIndexHome = (ui.bgIndexHome - 1);
-      saveUI(ui);
-      await syncUI();
-    });
-    document.getElementById("bgNext").addEventListener("click", async ()=>{
-      const ui = getUI();
-      ui.bgIndexHome = (ui.bgIndexHome + 1);
-      saveUI(ui);
-      await syncUI();
-    });
-
-    bgOpacity.addEventListener("input", async ()=>{
-      const ui = getUI();
-      ui.bgOpacity = Number(bgOpacity.value);
-      saveUI(ui);
-      await applyBackground("home");
-    });
-
-    musicToggle.addEventListener("click", async ()=>{
-      const ui = getUI();
-      ui.musicOn = !ui.musicOn;
-      saveUI(ui);
-      await syncUI();
-
-      if(ui.musicOn){
-        try{ await audio.play(); } catch { audio.controls = true; }
-      }else{
-        audio.pause();
-        audio.currentTime = 0;
-      }
-    });
-
+  document.getElementById("bgPrev").onclick = async ()=>{
+    const ui = getUI(); ui.bgIndexHome--; saveUI(ui); await syncUI();
+  };
+  document.getElementById("bgNext").onclick = async ()=>{
+    const ui = getUI(); ui.bgIndexHome++; saveUI(ui); await syncUI();
+  };
+  bgOpacity.oninput = async ()=>{
+    const ui = getUI(); ui.bgOpacity = Number(bgOpacity.value);
+    saveUI(ui); await applyBackground("home");
+  };
+  musicToggle.onclick = async ()=>{
+    const ui = getUI(); ui.musicOn = !ui.musicOn; saveUI(ui);
     await syncUI();
-    syncKPI();
-    window.addEventListener("focus", ()=>{ syncKPI(); });
-  </script>
+    if(ui.musicOn){ try{ await audio.play(); }catch{} }
+    else{ audio.pause(); audio.currentTime = 0; }
+  };
+
+  await syncUI();
+  syncKPI();
+  window.addEventListener("focus", syncKPI);
+</script>
 </body>
 </html>
