--- a/index.html
+++ b/index.html
@@ -4,124 +4,188 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>追星存錢手帳</title>
-
-  <!-- 全站共用樣式 -->
   <link rel="stylesheet" href="assets/app.css" />
-
-  <!-- 首頁小調整 -->
   <style>
-    main{
-      max-width:900px;
-      margin:0 auto;
-      padding:40px 16px 60px;
-    }
-
+    .home-main{max-width:980px;margin:0 auto;padding:26px 16px 40px;}
     .home-actions{
       display:grid;
       grid-template-columns: 1fr;
-      gap:20px;
-      margin-top:40px;
-    }
-    @media (min-width:720px){
-      .home-actions{
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-
-    .home-actions a{
-      text-decoration:none;
-    }
-
-    .home-actions .btn.primary{
+      gap:16px;
       width:100%;
-      min-height:180px;
-      font-size:18px;
+      margin-top:18px;
+    }
+    @media (min-width:860px){
+      .home-actions{grid-template-columns: 1fr 1fr 1fr;}
+    }
+    .home-actions .btn.primary{
+      height:160px;
+      padding:22px;
       display:flex;
+      flex-direction:column;
       align-items:center;
       justify-content:center;
-      flex-direction:column;
       gap:10px;
+      text-decoration:none;
     }
+    .home-actions .icon{font-size:40px;}
+    .home-actions .desc{font-size:12px;color:var(--muted);}
 
-    .home-kpi{
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
-      justify-content:center;
-      margin-top:20px;
+    /* 底部小工具列 */
+    .home-footer{
+      margin-top:26px;
+      border-top:1px solid var(--line);
+      padding-top:12px;
+      opacity:.95;
     }
-
-    .home-kpi .pill{
-      font-size:14px;
-    }
-
-    footer{
-      margin-top:60px;
-      text-align:center;
-      font-size:12px;
-      color:var(--muted);
-    }
+    .mini-row{display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:center}
+    .mini-row .btn{padding:8px 12px}
+    .mini-row input[type="range"]{width:140px}
+    .mini-label{font-size:12px;color:var(--muted)}
   </style>
 </head>
-
 <body>
   <div class="bg-wrap"></div>
 
-  <header>
-    <h1>追星存錢手帳</h1>
-    <div class="sub">為 Shokichi / Akira / EXILE THE SECOND</div>
-  </header>
+<header>
+  <h1>追星存錢手帳</h1>
+  <a class="mini-link" href="settings.html">素材庫</a>
+</header>
 
-  <main>
-    <!-- KPI -->
-    <div class="home-kpi">
-      <span class="pill">本月合計：<b id="monthTotal">0</b> 元</span>
-      <span class="pill">連續存錢：<b id="streak">0</b> 天</span>
+<main class="home-main">
+  <div class="row" style="justify-content:center;margin-bottom:6px;">
+    <span class="pill">本月存入：<b id="monthSave">0</b></span>
+    <span class="pill">本月花費：<b id="monthSpend">0</b></span>
+    <span class="pill">連續打卡：<b id="streak">0</b> 天</span>
+  </div>
+
+  <div class="home-actions">
+    <a class="btn primary" href="calendar.html">
+      <div class="icon">📅</div>
+      <div>存錢月曆</div>
+      <div class="desc">存錢亮起來＋貼紙</div>
+    </a>
+
+    <a class="btn primary" href="expense.html">
+      <div class="icon">🧾</div>
+      <div>花費</div>
+      <div class="desc">花費月曆＋統計</div>
+    </a>
+
+    <a class="btn primary" href="events.html">
+      <div class="icon">📊</div>
+      <div>事件</div>
+      <div class="desc">依事件回顧明細</div>
+    </a>
+  </div>
+
+  <div class="home-footer">
+    <div class="mini-row">
+      <button class="btn" id="bgPrev">背景 ◀</button>
+      <button class="btn" id="bgNext">背景 ▶</button>
+
+      <span class="mini-label">透明度</span>
+      <input id="bgOpacity" type="range" min="0.1" max="0.6" step="0.05" />
+
+      <span class="mini-label">音量</span>
+      <input id="vol" type="range" min="0" max="1" step="0.05" />
+
+      <button class="btn" id="musicToggle">🎵 音樂</button>
     </div>
 
-    <!-- 主要入口（⚠️ 只有連結，沒有 script） -->
-    <div class="home-actions">
-      <a href="calendar.html" class="btn primary">
-        📅 月曆存錢
-        <span class="muted">每天記錄，貼紙鼓勵</span>
-      </a>
+    <audio id="bgm" style="width:100%;margin-top:8px;display:none" controls></audio>
+  </div>
+</main>
 
-      <a href="events.html" class="btn primary">
-        📚 事件統整
-        <span class="muted">依事件回顧每一筆</span>
-      </a>
+<script type="module">
+  import {
+    getUI, saveUI, applyBackground, setupBGM,
+    loadData, monthSum, computeStreak, ymd, pad
+  } from "./assets/app.js";
 
-      <a href="spend.html" class="btn primary">
-        💸 花費記錄
-        <span class="muted">追星花了多少一眼看</span>
-      </a>
-    </div>
+  // 花費資料 key（expense.html 也要用同一個）
+  const EXP_KEY = "oshi_expenses_v1";
+  function loadExpenses(){
+    const raw = localStorage.getItem(EXP_KEY);
+    if(!raw) return { records:{} };
+    try{
+      const x = JSON.parse(raw);
+      return x && x.records ? x : { records:{} };
+    }catch{
+      return { records:{} };
+    }
+  }
+  function expenseMonthSum(exp, y, m){
+    const prefix = `${y}-${pad(m+1)}-`;
+    let s = 0;
+    for(const k of Object.keys(exp.records)){
+      if(!k.startsWith(prefix)) continue;
+      const arr = exp.records[k] || [];
+      s += arr.reduce((t,r)=>t + (Number(r.amount)||0), 0);
+    }
+    return s;
+  }
 
-    <footer>
-      <p>手帳風 × 推活紀錄</p>
-    </footer>
-  </main>
+  const bgOpacity = document.getElementById("bgOpacity");
+  const vol = document.getElementById("vol");
+  const musicToggle = document.getElementById("musicToggle");
+  const audio = document.getElementById("bgm");
 
-  <!-- ⚠️ 只有 JS 檔才用 script -->
-  <script type="module">
-    import {
-      loadData,
-      monthSum,
-      calcStreak,
-      applyBackground
-    } from "./assets/app.js";
+  function syncKPI(){
+    const now = new Date();
+    const todayKey = ymd(now);
 
+    const saveDataObj = loadData();
+    document.getElementById("monthSave").textContent =
+      String(monthSum(saveDataObj, now.getFullYear(), now.getMonth(), ""));
+    document.getElementById("streak").textContent =
+      String(computeStreak(saveDataObj, todayKey, ""));
+
+    const exp = loadExpenses();
+    document.getElementById("monthSpend").textContent =
+      String(expenseMonthSum(exp, now.getFullYear(), now.getMonth()));
+  }
+
+  async function syncUI(){
+    const ui = getUI();
     await applyBackground("home");
 
-    const el = id => document.getElementById(id);
-    const data = loadData();
+    bgOpacity.value = String(ui.bgOpacity ?? 0.25);
+    vol.value = String(ui.musicVolume ?? 0.6);
 
-    const now = new Date();
-    const y = now.getFullYear();
-    const m = now.getMonth();
+    musicToggle.textContent = ui.musicOn ? "🎵 音樂 ON" : "🎵 音樂 OFF";
+    audio.style.display = ui.musicOn ? "block" : "none";
 
-    el("monthTotal").textContent = String(monthSum(data, y, m, ""));
-    el("streak").textContent = String(calcStreak(data));
-  </script>
+    await setupBGM(audio);
+    audio.volume = Number(vol.value);
+  }
+
+  document.getElementById("bgPrev").onclick = async ()=>{
+    const ui = getUI(); ui.bgIndexHome = (ui.bgIndexHome ?? 0) - 1;
+    saveUI(ui); await syncUI();
+  };
+  document.getElementById("bgNext").onclick = async ()=>{
+    const ui = getUI(); ui.bgIndexHome = (ui.bgIndexHome ?? 0) + 1;
+    saveUI(ui); await syncUI();
+  };
+  bgOpacity.oninput = async ()=>{
+    const ui = getUI(); ui.bgOpacity = Number(bgOpacity.value);
+    saveUI(ui); await applyBackground("home");
+  };
+  vol.oninput = ()=>{
+    const ui = getUI(); ui.musicVolume = Number(vol.value);
+    saveUI(ui);
+    audio.volume = Number(vol.value);
+  };
+  musicToggle.onclick = async ()=>{
+    const ui = getUI(); ui.musicOn = !ui.musicOn; saveUI(ui);
+    await syncUI();
+    if(ui.musicOn){ try{ await audio.play(); }catch{} }
+    else{ audio.pause(); audio.currentTime = 0; }
+  };
+
+  await syncUI();
+  syncKPI();
+  window.addEventListener("focus", syncKPI);
+</script>
 </body>
 </html>
